<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The_brain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_note">Welcome! @string/enter_usernameEnter your credentials to view the_brain!</string>
    <string name="user_name">Username:</string>
    <string name="enter_username">Enter your user name!</string>
    <string name="enter_password">Enter your password!</string>
    <string name="pass_word">Password:</string>

</resources>
