<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocean_blue"
    android:orientation="vertical"
    tools:context=".LoginActivity" >
  
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_note"
        android:textSize="22sp" /> 
 	<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="22sp"
        android:text="@string/user_name" />
 	<EditText
 	    android:id="@+id/editText1"
 	    android:layout_width="280dp"
 	    android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
 	    android:ems="10"
 	    android:hint="@string/enter_username"/>
 	<TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="22sp"
        android:text="@string/pass_word" />
 	<EditText
 	    android:id="@+id/editText2"
 	    android:layout_width="280dp"
 	    android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
 	    android:ems="10"
 	    android:hint="@string/enter_password"/>

</LinearLayout>
